Bugfix for horizontal scroll

--- a/extension/tailor/tailor.css
+++ b/extension/tailor/tailor.css
@@ -21,14 +21,15 @@
 }
 
 .__tailor {
-  /* display: none; */
+  display: none;
   pointer-events: none;
-  z-index: 10000;
+  z-index: 99000;
   position: absolute;
   top: 0;
   left: 0;
-  width: 0;
-  height: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", Helvetica,
     Inter, Arial, "Noto Sans", sans-serif;
 }
@@ -53,6 +54,17 @@
 
 .__tailor-highlight {
   position: absolute;
+}
+
+/* Using a pseudo element so it can be positioned above the padding and margin elements  */
+.__tailor-highlight::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10001;
   outline: 1px solid var(--tailor-blue);
   outline-offset: -1px;
 }
@@ -205,6 +217,7 @@
   font-weight: bold;
   display: inline-block;
   position: absolute;
+  z-index: 10001;
 }
 
 .__tailor-ruler--x div {
